--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -88,15 +88,6 @@
           </div>
         </div> 
 
-          <form action="/yourscript.cgi-or-your-page.html" method="POST" onsubmit="return checkCheckBox(this)">
-
-          <!--Enter your form contents here-->
-
-          <b>By submitting, I agree that all info entered was done accurately & truthfully.</b><br />
-          I accept all terms and conditions: <input type="checkbox" value="0" name="agree">
-
-          </form>
-
         <div class="actions row mt-5 mb-3">
           <div class="col d-flex justify-content-center">
             <%= form.submit %>
@@ -105,7 +96,7 @@
 
 
 
-        <script>
+<!--         <script>
             function checkCheckBox(f){
             if (f.agree.checked == false )
             {
@@ -115,7 +106,7 @@
             return true;
             }
         //-->
-        </script>
+        </script> -->
 
 
 
