--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -120,6 +120,17 @@ a:hover {
   z-index: -100;
 }
 
+.jumbotron{
+    background: url("https://s3.us-east-2.amazonaws.com/ypmarketnew/assets/logo.png") no-repeat center center; 
+    -webkit-background-size: 100% 100%;
+    -moz-background-size: 100% 100%;
+    -o-background-size: 100% 100%;
+    background-size: 70% 100%;
+    height: 380px;
+    width: 100%
+
+}
+
 @import url(https://fonts.googleapis.com/css?family=Lato);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);
 body {
