--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -8,7 +8,50 @@
         <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
           <%= devise_error_messages! %>
           
-          
+            
+         <div class="form-group">
+          <%= f.label :first_name %><br />
+          <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :last_name %><br />
+          <%= f.text_field :last_name, autofocus: true, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :username %><br />
+          <%= f.text_field :username, autofocus: true, class: "form-control" %>
+        </div>
+        
+
+
+        <div class="form-group">
+          <%= f.label :street_address %><br />
+          <%= f.text_field :street_address, autofocus: true, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :city %><br />
+          <%= f.text_field :city, autofocus: true, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :zipcode %><br />
+          <%= f.text_field :zipcode, autofocus: true, class: "form-control" %>
+        </div>
+
+        <div class="form-group">
+          <%= f.label :birthday %><br />
+          <%= f.date_field :birthday, autofocus: true, class: "form-control" %>
+        </div>
+
+              <div class="form-group">
+        <%= f.label :bio %><br />
+        <%= f.text_area :bio, autofocus: true, class: "form-control" %>
+      </div>
+
+
 
           <div class="form-group">
             <%= f.label :email %><br />
@@ -37,6 +80,13 @@
             <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
             <%= f.password_field :current_password, autocomplete: "off", class: "form-control" %>
           </div>
+
+
+          <div class="form-group">
+              <%= f.label :image %>
+              <%= f.file_field :image, class: "form-control" %>
+          
+         </div>
 
           <div class="form-group">
             <%= f.submit "Update", class: "btn btn-primary" %>
