--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -24,15 +24,14 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown">Seller Account <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "View Profile", profile_path(current_user) %></li>
+            <li><%= link_to "View Profile", user_path(current_user) %></li>
             <li><a href="https://dashboard.stripe.com/" target="_blank">Manage Sales</a></li>
           </ul>
         </li>
 
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.username %> <b class="caret"></b></a>
           <ul class="dropdown-menu">
-            <li><%= link_to "Edit Profile", edit_profile_path(current_user) %></li>
             <li><%= link_to "Edit Account", edit_user_registration_path %></li>
             <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
           </ul>
