--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -52,6 +52,8 @@
       });
   });
 </script>
+
+
 </div>
   
 
@@ -102,7 +104,7 @@
                 <p><%= number_to_currency(product.price) %></p>
                 <p><%= link_to product.category.name %></p>
                
-                <p><em>Sold By:</em> <%= link_to product.user.profile.username, profile_path(current_user) %></p>
+                <p><em>Sold By:</em> <%= link_to product.user.username, user_path(product) %></p>
               </div>
             </div>
           </div>
