--- a/app/views/products/_form_edit.html.erb
+++ b/app/views/products/_form_edit.html.erb
@@ -66,6 +66,15 @@
           </div>
         </div>
 
+         <div class="form-group mt-3">
+          <div class="col-3">
+            <%= form.label :color, class: "pt-1 font-weight-bold" %>
+          </div>
+          <div class="col-8">
+            <%= form.select :color, ["None", "Red", "Pink", "Yellow", "Orange", "Blue", "Purple", "Brown", "Green", "White", "Grey", "Black", "Gold", "Silver", "Bronze", "Platinum"], multiple: true, class: "form-control" %>
+          </div>
+        </div>
+
         <div class="form-group">
           <div class="col-3">
             <%= form.label :image, class: "font-weight-bold" %>
