--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -42,15 +42,6 @@
               <%= select_tag(:category_id, options_for_select(@categories), :prompt => "Choose a Category", :class => "form-control") %>
          </div>
 
-        <div class="form-group">
-          <div class="col-3">
-            <%= form.label :all_tags, class: "pt-1 font-weight-bold" %>
-          </div>
-          <div class="col-8">
-            <%= form.text_field :all_tags, class: "form-control" %>
-          </div>
-        </div>
-
         <div class="form-group mt-3">
           <div class="col-3">
             <%= form.label :shipping_cost, class: "pt-1 font-weight-bold" %>
@@ -66,9 +57,27 @@
             <%= form.label :condition, class: "pt-1 font-weight-bold" %>
           </div>
           <div class="col-8">
-            <%= form.text_field :condition, id: :product_condition, class: "form-control" %>
+            <%= form.select :condition, ["New", "Fair", "Old", "Antique"], class: "form-control" %>
           </div>
         </div>
+
+        <div class="form-group mt-3">
+          <div class="col-3">
+            <%= form.label :color, class: "pt-1 font-weight-bold" %>
+          </div>
+          <div class="col-8">
+            <%= form.select :color, ["None", "Red", "Pink", "Yellow", "Orange", "Blue", "Purple", "Brown", "Green", "White", "Grey", "Black", "Gold", "Silver", "Bronze", "Platinum"], multiple: true, class: "form-control" %>
+          </div>
+        </div>
+
+        <%= form_for @week_selection do |f| %>
+  <% days = ['Mon', 'Tue', 'Wen', 'Thu', 'Fri', 'Sat', 'Sun'] %>
+  <% days.each do |day| %>
+    <%= f.check_box :days, { multiple: true }, day, false %>
+    label day
+  <% end %>
+  <%= f.submit %>
+<% end %>
 
         <div class="form-group mt-3">
           <div class="col-3">
