--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <div class="row" style="margin-top: 7%;">
    
       <div class="col-md-7" align="center">
-        <%= image_tag @user.image.url(:thumb), id: "profile_pic" %>
+     
 
       <% if @user.id == current_user.id %>
         <h2>Hey <%= @user.username %>!<h2>
@@ -16,7 +16,7 @@
             <div class="col d-flex justify-content-center">
               <div class="row">
                 <div class="col text-center pt-3">
-                  <h4 class="font-weight-bold font-heading mb-3">Bio</h4>
+                  <h4 class="font-weight-bold font-heading mb-3"><strong>Bio</strong></h4>
                   <p class="font-small"><%= @user.bio %></p>
                 </div>
               </div>
