--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,27 +1,18 @@
-<%= simple_form_for([@product, @product.reviews.build]) do |f| %>
-	<%= f.select :rating, [1,2,3,4,5]%>
-	<%= f.input :comment %>
-	<%= f.button :submit %>
-<% end %>
-
-<script>
-	$('#star-rating').raty({
-		path: '/assets'
-		scoreName: 'review[rating]'
-	});
-</script>
-
-	<% if user_signed_in? %>
-
-		<% if @review.user_id == current_user.id %>
-
-			<div class="links btn-group">
-
-				<%= link_to "Edit", edit_product_review_path(review.product, review), class: "btn btn-custom" %>
-				<%= link_to "Delete", product_review_path(review.product, review), method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-custom" %>
-
-			</div>
-		
-		<% end %>	
-
+<div class="form-group">
+	<%= simple_form_for([@product, @product.reviews.build]) do |f| %>
+		How Many Stars: <%= f.select :rating, [1,2,3,4,5], :class => "form-control"%>
+		<br>
+		<%= f.input :comment, :class => "form-control" %>
+		<br>
+		<%= f.button :submit, :class => "btn btn-primary"%>
 	<% end %>
+</div>
+
+	<script>
+		$('#star-rating').raty({
+			path: '/assets'
+			scoreName: 'review[rating]'
+		});
+	</script>
+
+
