--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -61,6 +61,20 @@ a:hover {
   margin-top: 3%;
 }
 
+#review_dis{
+  background-color: lavender;
+  padding: 10px;
+  margin-top: 1.5%;
+  margin-left: 2%;
+}
+
+#review_row{
+  background-color: lavender;
+  padding: 10px;
+  margin-top: 5%;
+  border-radius: 10px;
+}
+
 .navbar {
   background-color: white;
   color: black;
