--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,14 @@
-<h1> New Review </h1>
+<div class="row">
+	<div class="col-md-12 center" align="center" id="review_row">
 
-<%= render 'form' %>
+		<h1> New Review </h1>
+
+		<div>
+			<%= render 'form' %>
+		</div>
+
+
+	</div>
+
+</div>
+
