small production changes

--- a/app/views/products/_form_new.html.erb
+++ b/app/views/products/_form_new.html.erb
@@ -75,19 +75,9 @@
             <%= form.label :size, class: "pt-1 font-weight-bold" %>
           </div>
           <div class="col-8">
-            <%= form.select :size, ["X-SMALL", "SMALL", "MEDIUM", "LARGE", "X-LARGE", "XX-LARGE", "XXX-LARGE"], multiple: true, class: "form-control" %>
+            <%= form.select :size, ["Infant/New Born", "0-6 Months","Toddler", "X-SMALL", "SMALL", "MEDIUM", "LARGE", "X-LARGE", "XX-LARGE", "XXX-LARGE"], multiple: true, class: "form-control" %>
           </div>
         </div>
-
-
-        <%= form_for @week_selection do |f| %>
-          <% days = ['Mon', 'Tue', 'Wen', 'Thu', 'Fri', 'Sat', 'Sun'] %>
-          <% days.each do |day| %>
-            <%= f.check_box :days, { multiple: true }, day, false %>
-            label day
-          <% end %>
-          <%= f.submit %>
-        <% end %>
 
         <div class="form-group mt-3">
           <div class="col-3">
