--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -4,5 +4,9 @@
 	</div>
 </div>
 
+
 <h1>Peace Peace Family!</h1>
 <p>This website platform allows black business owners to sell, purchase, and advertise their products and services. We offer the chance of success to all those whom are willing to utilize this platform. It is in the special hopes of this platform that you are able to transform your black business in such a way that you may impact not only yourself but the lives of your community as well. Much love family hope you enjoy this site! </p>
+
+<h2>Terms and Conditions</h2>
+<%= link_to "Terms & Conditions", pages_terms_path %>
