--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -8,6 +8,7 @@
 
 <div class="row" style="margin-top: 3%">
 	<strong><h5>If map is not showing plaese refresh the page. Thank You!</h5></strong>
+	<strong><h4>Double Click your state to find business near you!</h4></strong>
 </div>
 
 <div class="row">
