--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -71,6 +71,7 @@
 <div class="row" style="margin-top: 5%">
     <% if @user.id == current_user.id %>
       <h3 class="font-heading text-center">My Products</h3>
+      <h4><em><strong>Please Messege buyer Tracking Numbers Within 48 hours For Every Sale Email should be located on stripe!</strong></em></h4>
       <% else %>
       <h3 class="font-heading text-center"><%= @user.username %>'s Products</h3>
     <% end %>
