--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -71,7 +71,7 @@
 <div class="row" style="margin-top: 5%">
     <% if @user.id == current_user.id %>
       <h3 class="font-heading text-center">My Products</h3>
-      <h4><em><strong>Please Remember to Check/Send for Tracking Numbers Within 48 hours For Every Sale/Purchase Within your email or stripe account. <em>Customers Email should be located within stripe!</em></strong></em></h4>
+      <h4><em><strong>Please Remember to Check/Send for Tracking Numbers Within 48 hours of Every Sale/Purchase Within your email or stripe account. <em>Customers Email should be located within stripe!</em></strong></em></h4>
       <% else %>
       <h3 class="font-heading text-center"><%= @user.username %>'s Products</h3>
     <% end %>
