--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -13,15 +13,15 @@
 <div class="col-md-12">
 	<% @products.each do |product| %>
 
-		<div class="col-md-3">
-        <div class="thumbnail">
+		<div class="col-md-3 center" align="center">
+        <div class="thumbnail_p">
         <%= link_to product do %>
             <%= image_tag(product.image.url(:thumb), :class => "thumbs") %>
         <% end %>
           <div class="caption">
             <h3><%= product.title %></h3>
             <p><%= number_to_currency(product.price) %></p>
-            <p><em>Sold By:</em> <%= product.profile.username %></p>
+            <p><em>Sold By:</em> <%= product.user.username %></p>
           </div>
         </div>
       </div>
