--- a/app/views/categories/_search_form.html.erb
+++ b/app/views/categories/_search_form.html.erb
@@ -1,4 +1,12 @@
-<%= form_tag(products_path, method: :get) do %>
-  <%= text_field_tag :search %>
-  <%= submit_tag 'Search', name: nil %>
-<% end %>
+	<%= search_form_for @q, html: { class: "form-group" } do |f| %>
+		
+		<div class="col-md-9 center" style="margin-left: 4%; margin-bottom: 5%" >
+			<%= f.search_field :title_or_description_cont, class: "form-control", placeholder: "Search..." %>
+		</div>
+
+		<div class="col-md-2" style="margin-left: 4%">
+			<%= submit_tag 'Search', name: nil, class: 'btn btn-primary', id: "search_sub" %>
+		</div>		
+			
+		
+	<% end %>
