--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -2,7 +2,7 @@
 
 <div class="row">
   <div class="form-group">
-    <%= render 'search_form', class: "form-control" %>
+    <%= render 'search_form' %>
   </div>
 </div>
 
