--- a/app/views/partials/_navbar.html.erb
+++ b/app/views/partials/_navbar.html.erb
@@ -22,7 +22,7 @@
     <ul class="nav navbar-nav navbar-right">
       <% if user_signed_in? %>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Seller Account <b class="caret"></b></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.username %>'s Account <b class="caret"></b></a>
           <ul class="dropdown-menu">
             <li><%= link_to "View Profile", user_path(current_user) %></li>
             <li><a href="https://dashboard.stripe.com/" target="_blank">Manage Sales</a></li>
