--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -7,15 +7,22 @@
 </div>
 
 <div class="row" style="margin-top: 3%">
-	<strong><h5>If map is not showing plaese refresh the page. Thank You!</h5></strong>
-	<strong><h4>Double Click your state to find business near you!</h4></strong>
-</div>
+	<div class="col-md-12 center" align="center">
+			<strong><h5>If map is not showing plaese refresh the page. Thank You!</h5></strong>
+			<strong><h4>Double Click your state to find business near you!</h4></strong>
+	</div>
 
+</div>
+    <script type="text/javascript" src="http://yoursite.com/mapdata.js"></script>   
+    <script  type="text/javascript" src="http://yoursite.com/worldmap.js"></script>
 <div class="row">
 	<div class="col-md-12 center" align="center">
 		<div class="usa" id="map"></div>
 	</div>
 </div>
+
+    <script type="text/javascript" src="http://yoursite.com/mapdata.js"></script>   
+    <script  type="text/javascript" src="http://yoursite.com/worldmap.js"></script>
 
 <div class="row" style="margin-top: 3%">
 	<div class="col-md-12" align="center">
