--- a/app/views/subscribers/_form.html.erb
+++ b/app/views/subscribers/_form.html.erb
@@ -7,5 +7,5 @@
           data-amount="4999">
           	
 </script>
-<span> $49.99 per month, to cancel please email Theblackwomenisgodstores@gmail.com.</span>
+<span><strong> $49.99 per month, to cancel please email Theblackwomenisgodstores@gmail.com.</strong></span>
 <% end %>       
