--- a/app/views/subscribers/new.html.erb
+++ b/app/views/subscribers/new.html.erb
@@ -1,22 +1,22 @@
 <div class="container">
     <div class="row">
-        <div class="col-md-6 col-md-offset-3 panel panel-default form-style">
+        <div class="col-md-6 col-md-offset-3 panel panel-default form-style center" align="center" style="background-color: lavender; padding: 10px; border-radius: 10px">
             <div class="panel-body">
-                <h2><strong>Please Subscribe</strong> To post your business</h2>
-                <h3>This is the final step to give you full access to posting your business </h3> 
-                <h5>
+                <h2 style="margin-top: 1%"><strong>Please Subscribe</strong> To post your business</h2>
+                <h3 style="margin-top: 1%">This is the final step to give you full access to posting your business </h3> 
+                <h5 style="margin-top: 1%">
                 	The monthly subscription fee for promotion of your business on the site is $49.99.
-Subscription fee's Can be changed at anytime based on our discretion.
+                    Subscription fee's Can be changed at anytime based on our discretion.
 
-<strong>All Businesses who subscribe are presumed to be in good legal standing.</strong>
+                    <strong>All Businesses who subscribe are presumed to be in good legal standing.</strong>
 
-Any reports or complaints concerning fraudulent or illegal behavior will result in termination of your account and subscription will not be refunded, <strong>LEGAL ACTION WILL BE TAKEN IF REQUIRED.</strong>
+                    Any reports or complaints concerning fraudulent or illegal behavior will result in termination of your account and subscription will not be refunded, <strong>LEGAL ACTION WILL BE TAKEN IF REQUIRED.</strong>
                 </h5>
-               <form action="/yourscript.cgi-or-your-page.html" method="POST" onsubmit="return checkCheckBox(this)">
+               <form action="/yourscript.cgi-or-your-page.html" method="POST" onsubmit="return checkCheckBox(this)" style="margin-top: 1%">
 
           <!--Enter your form contents here-->
 
-          <b>By submitting, I agree that all info entered was done accurately & truthfully.</b><br />
+          <b style="margin-top: 1%">By submitting, I agree that all info entered was done accurately & truthfully.</b><br />
           I accept all terms and conditions: <input type="checkbox" value="0" name="agree">
 
           </form>
