--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -56,7 +56,7 @@
   </div>
   <div class="row">
     <div class="col-md-6" id="review_dis">
-      <%= link_to "Add Review", new_product_review_path(@product), :class => "btn btn-primary" %>
+      <%= link_to "Add Review", new_product_review_path(@product), :class => "btn btn-primary" %><br>
        <%= render @product.reviews %>
     </div>
   </div>
