--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -112,7 +112,7 @@
         <% end %> 
       </div>
     </div> 
-    <div class="row">
+    <div class="row" style="margin-left: 5%">
       <%= will_paginate @products, renderer: BootstrapPagination::Rails %>
     </div>
     
