--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,6 +21,13 @@
                   <h4 class="font-weight-bold font-heading mb-3"><strong>Bio</strong></h4>
                   <p class="font-small"><%= @user.bio %></p>
                 </div>
+                <div>
+                  <%= @user.followers_count %>
+                </div>
+                <div>
+                  <%= link_to('Follow', follow_user_path(@user), method: :post) %>
+                  <%= link_to('Unfollow', unfollow_user_path(@user), method: :post) %>
+                </div>
               </div>
             </div>
       </div>
