--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,8 +47,13 @@ a:hover {
 
 #thumbnail_p{
   padding: 3%;
-  width: 69%
+  width: 100%;
+ 
 
+}
+
+#t_backdrop{
+   // height: 60% !important
 }
 
 #prod_row{
