--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,6 +56,11 @@ a:hover {
    // height: 60% !important
 }
 
+#thunbs{
+  max-height: 200px !important
+  
+}
+
 #prod_row{
   background-color: rgba(80, 14, 107, 0.9);
   margin-top: 5%;
