--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -2,9 +2,9 @@
   <div id="myCarousel" class="carousel slide" data-ride="carousel" style="height: 60%">
   <!-- Indicators -->
   <ol class="carousel-indicators">
-    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    <li data-target="#myCarousel" data-slide-to="1"></li>
-    <li data-target="#myCarousel" data-slide-to="2"></li>
+ <!--    <li data-target="#myCarousel" data-slide-to="0" class="active"></li> -->
+<!--     <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li> -->
   </ol>
 
   <!-- Wrapper for slides -->
@@ -15,7 +15,7 @@
   </div>
 
   <!-- Left and right controls -->
-  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+<!--   <a class="left carousel-control" href="#myCarousel" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left"></span>
     <span class="sr-only">Previous</span>
   </a>
@@ -23,7 +23,7 @@
     <span class="glyphicon glyphicon-chevron-right"></span>
     <span class="sr-only">Next</span>
   </a>
-</div>
+</div> -->
 <script type="text/javascript">
   $(document).ready(function(){
       // Activate Carousel
@@ -103,12 +103,15 @@
         <% @products.each do |product| %>
           <div  id="t_backdrop">
             <!-- <div id="thumbnail_p"> -->
-                <div class="col-md-3" style="margin-top: 2%; height: 80%">
-                  <div class="thumbnail">
+                <div class="col-md-3" style="margin-top: 2%; height: 80% !important">
+                  <div class="thumbnail" style="height: 80%">
                   <%= link_to product do %>
-                     <%= image_tag(product.image.url(:thumb), :class => "thumbs") %>
+                    <div style=" height: 80% !important">
+                      <%= image_tag(product.image.url(:thumb), :class => "thumbs", :id => "thumbs") %>
+                    </div>
+                     
                   <% end %>
-                    <div class="caption" align="center">
+                    <div class="caption" align="center" style="width: 100px; height: 150px; padding: 5px">
                       <h4><%= product.title %></h4>
                       <p><%= number_to_currency(product.price) %></p>
                       <p><%= link_to product.category.name %></p>
