--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -56,8 +56,8 @@ a:hover {
    // height: 60% !important
 }
 
-#thunbs{
-  max-height: 200px !important
+#thumbs{
+  height: 100px !important
   
 }
 
