--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -103,15 +103,15 @@
         <% @products.each do |product| %>
           <div  id="t_backdrop">
             <!-- <div id="thumbnail_p"> -->
-                <div class="col-md-3" style="margin-top: 2%; height: 80% !important">
-                  <div class="thumbnail" style="height: 80%">
+                <div class="col-md-3" style="margin-top: 2%; height: 100% !important">
+                  <div class="thumbnail" style="height: 80% !important">
                   <%= link_to product do %>
-                    <div style=" height: 80% !important">
+                    <div style=" height: 110% !important">
                       <%= image_tag(product.image.url(:thumb), :class => "thumbs", :id => "thumbs") %>
                     </div>
                      
                   <% end %>
-                    <div class="caption" align="center" style="width: 100px; height: 150px; padding: 5px">
+                    <div class="caption" align="center" style="width: 100px; height: 80%; padding: 3%; word-wrap: break-word">
                       <h4><%= product.title %></h4>
                       <p><%= number_to_currency(product.price) %></p>
                       <p><%= link_to product.category.name %></p>
