--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -111,7 +111,7 @@
                     </div>
                      
                   <% end %>
-                    <div class="caption" align="center" style="width: 100px; height: 80%; padding: 3%; word-wrap: break-word">
+                    <div class="caption" align="center" style="width: 100px; height: 180px; padding: 3%; word-wrap: break-word">
                       <h4><%= product.title %></h4>
                       <p><%= number_to_currency(product.price) %></p>
                       <p><%= link_to product.category.name %></p>
