--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -129,9 +129,11 @@
                     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                       Action <span class="caret"></span>
                     </button>
-                    <ul class="dropdown-menu" role="menu">
-                      <li><%= link_to "Edit", edit_product_path(product), class: "btn btn-link" %></li>
-                      <li><%= link_to 'Destroy', product, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-link" %></li>
+                     <% if @user.id == current_user.id %>
+                      <ul class="dropdown-menu" role="menu">
+                          <li><%= link_to "Edit", edit_product_path(product), class: "btn btn-link" %></li>
+                          <li><%= link_to 'Destroy', product, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-link" %></li>
+                      <% end %>
                     </ul>
                   </div>
               </div>
