--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,7 @@
             <h2>Hey <%= @user.username %>!<h2>
             <%= link_to " Conversations", conversations_path %>
             <% else %>
+            <%= image_tag @user.image(:thumb), id: "profile_pic" %> 
             <strong><h3><%= @user.username %>'s Profile</h3></strong>
             <%= link_to "Message", new_conversation_path(@user) %>
           <% end %>
