--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -114,7 +114,7 @@
                     <div class="caption" align="center" style="width: 125px; height: 350px; padding: 3%; word-wrap: break-word">
                       <h4><%= product.title %></h4>
                       <p><%= number_to_currency(product.price) %></p>
-                      <p><%= link_to product.category.name %></p>
+                      <p><%= link_to product.category.name, category_path(product.category) %></p>
                       
                       <p><em>Sold By:</em> <%= link_to product.user.username, user_path(product.user) %></p>
                     </div>
