--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -88,6 +88,12 @@
     <h3><strong>Recent Products</strong></h3>
   </div>
 </div>
+
+<div class="row" style="margin-left: 2%">
+  <% if user_signed_in? %>
+    <%= button_to 'New product', new_product_path, class: "btn btn-primary" %>
+  <% end %>
+</div>
   
   <div class="row" id="prod_row">
     
