--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -52,7 +52,7 @@
 
   </div>
   <div class="row" align="center">
-    <%= button_to 'Back', categories_path, class: "btn btn-primary" %>
+    <%= button_to 'Back', root_path, class: "btn btn-primary" %>
   </div>
 
 
