--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -109,42 +109,48 @@
 
 <div class="row" id="prod_row" style="margin-top: 2%">
   <!-- ################# Products ################# -->
+  <% @products.each do |product| %>
+    <div id="t_backdrop" >
+      <div class="col-md-12 center"   align="center">
 
+        <div class="col-md-3" id="thumbnail_p" style="background-color: white; padding: 2%" align="center">
+           <% if product.user.id == @user.id %>
 
+              <%= image_tag product.image.url(:thumb), class: "product-overview-image" %>
 
-   <% @products.each do |product| %>
-    <div id="t_backdrop">
-      <div class="col-md-3 center" id="thumbnail_p" align="center">
-     
-          <% if product.user.id == @user.id %>
-
-                <%= image_tag product.image.url(:thumb), class: "product-overview-image" %>
-                    <h4 class="font-heading pt-2">
+              <h4 class="font-heading pt-2">
                       <%= product.title %>
-                    </h4>
-                    <p>
+              </h4>
+
+              <p>
                       <%= product.price %>
-                    </p>
-                <%= link_to "View Details", product, target: "_blank", class: "btn-blue btn font-white mt-5", :method => :get %>
-                  <div class="btn-group">
+              </p>
+
+              <%= link_to "View Details", product, target: "_blank", class: "btn-blue btn font-white mt-5", :method => :get %>
+
+              <div class="btn-group">
+                    <% if @user.id == current_user.id %>
                     <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
                       Action <span class="caret"></span>
                     </button>
-                     <% if @user.id == current_user.id %>
-                      <ul class="dropdown-menu" role="menu">
+                     
+                    <ul class="dropdown-menu" role="menu">
                           <li><%= link_to "Edit", edit_product_path(product), class: "btn btn-link" %></li>
                           <li><%= link_to 'Destroy', product, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-link" %></li>
-                      <% end %>
+                    <% end %>
                     </ul>
-                  </div>
               </div>
+       
                   
-          <% end %>
-      
+            <% end %>
+        </div>
+     
+
       </div>
-        <% end %>
-    </div> 
+    </div>
+  <% end %>
+</div> 
 
 
-</div>
+
 
