--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -76,7 +76,7 @@
 
 <div class="row" style="background-color: lavender; padding: 10px; margin: 2%; border-radius: 10px; ">
   <div class="col-md-12 center" align="center">
-      <h4>Peace Peace Family! Thank you so much for your support. The love given to the platform has been phenomenal. We are expecting minor thechnical difficulties. As the platform grows we will add many awesome features and extentions. We are constantly working to provide the best experience for all of our users.<br> <strong>Thank you!</strong> </h4>
+      <h4>Peace Peace Family! Thank you so much for your support. The love given to the platform has been phenomenal. We are expecting minor technical difficulties. As the platform grows we will add many awesome features and extentions. We are constantly working to provide the best experience for all of our users.<br> <strong>Thank you!</strong> </h4>
   </div>
 
 </div>
