--- a/app/views/subscribers/_form.html.erb
+++ b/app/views/subscribers/_form.html.erb
@@ -3,9 +3,13 @@
 
 <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="A month's subscription"
-          data-amount="4999">
-          	
+          data-description="A monthly Subscription To TBWIG"
+          data-amount="4999"
+          data-label="Sign Me Up!"
+		  data-name="The Black Women is God Stores"
+          >
 </script>
+
+
 <span><strong> $49.99 per month, to cancel please email Theblackwomenisgodstores@gmail.com.</strong></span>
 <% end %>       
