--- a/app/views/subscribers/_form.html.erb
+++ b/app/views/subscribers/_form.html.erb
@@ -3,7 +3,7 @@
 
 <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
           data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-          data-description="A monthly Subscription To TBWIG"
+          data-description="A monthly Subscription To TBWIG Stores"
           data-amount="4999"
           data-label="Sign Me Up!"
 		  data-name="The Black Women is God Stores"
