--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+
 
   <div class="col-md-6">
     <%= image_tag @business.image(:medium) %> 
@@ -15,7 +15,7 @@
 </p>
 
 <p>
-<%= link_to( @business.business_category.name, business_category_path) %>
+<%= @business.business_category.name %>
 </p>
 
 <p>
