--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -53,9 +53,10 @@
 	  	<table class="table table-striped table-bordered">
 			
 	  		<tr>
-			    <th class="center">Image</th>
+			    <th class="center"></th>
 			    <th class="center">Name</th>
 			    <th class="center">Description</th>
+			    <th class="center">Category</th>
 			    <th class="center">Owner</th>
 			    <th class="center">City</th>
 			</tr>
@@ -70,11 +71,15 @@
 				</th>
 
 				<th>
-					<h3><%= business.title %></h3>
+					<h3><%= link_to business.title, business_path(business) %></h3>
 				</th>
 
 				<th>
 					<p><%= business.description %></p>
+				</th>
+
+				<th>
+					<p><%= business.business_category.name %></p>
 				</th>
 
 				<th>
