--- a/app/views/businesses/edit.html.erb
+++ b/app/views/businesses/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', business: @business %>
 
-<%= link_to 'Show', @business %> |
+<%= link_to 'Show', business_path(@business) %> |
 <%= link_to 'Back', businesses_path %>
