--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -48,5 +48,8 @@
   <%= @business.number %>
 </p>
 
-<%= link_to 'Edit', edit_business_path(@business) %> |
+<% if @user.id == current_user.id %>
+  <%= link_to 'Edit', edit_business_path(@business) %> 
+<% end %>
+|
 <%= link_to 'Back', businesses_path %>
