--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -72,7 +72,7 @@
                 <ul class="dropdown-menu" role="menu">
                   <li><%= link_to "View", business, class: "btn btn-link" %></li>
                   <li><%= link_to "Edit", edit_business_path(business), class: "btn btn-link" %></li>
-                  <li><%= link_to 'Destroy', business, method: :delete, data: { confirm: "Are you sure? Remember to cancel subscription please email Theblackwomanisgodstores@gmail.com. You Are only allowed ONE business on the site if subscribed" }, class: "btn btn-link" %></li>
+                  <li><%= link_to 'Delete', business, method: :delete, data: { confirm: "Are you sure? Remember to cancel subscription please email Theblackwomanisgodstores@gmail.com. You Are only allowed ONE business on the site if subscribed" }, class: "btn btn-link" %></li>
                 </ul>
 
               </div>
