Admin panal fixed not styled

--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -47,7 +47,7 @@
             </div>
 
     <div class="row" style="margin-left: 5%">
-        <%= will_paginate @products, renderer: BootstrapPagination::Rails %>
+        <%= paginate @products %>
     </div>
 
   </div>
