--- a/app/views/businesses/index.html.erb
+++ b/app/views/businesses/index.html.erb
@@ -102,7 +102,7 @@
 			<% end %> 
 	  	</table>
 	     <div class="row" style="margin-left: 5%">
-      		<%= will_paginate @businesses, renderer: BootstrapPagination::Rails %>
+      		<%= paginate @businesses %>
    		 </div>
 	  </div>
 </div>
