--- a/app/views/businesses/show.html.erb
+++ b/app/views/businesses/show.html.erb
@@ -49,5 +49,13 @@
 </p>
 
 
+<div class="row">
+  <%= link_to 'Back', businesses_path %>
 
-<%= link_to 'Back', businesses_path %>
+  <% if @business.user_id == current_user.id %>
+
+    <%= link_to 'Edit', edit_business_path(@business) %>
+    
+  <% end %>
+
+</div>
