--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -128,7 +128,7 @@
     </div>
 
     <div class="row" style="margin-left: 5%">
-      <%= will_paginate @products, renderer: BootstrapPagination::Rails %>
+      <%= paginate @products %>
     </div>
     
  </div>     
