--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
                 <li><a href="https://www.facebook.com/PharaohAllah/" target="_blank" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
                 <li><a href="https://twitter.com/Pharaoh_Allah" target="_blank" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
                 <li><a href="https://www.youtube.com/channel/UCtKtmiQ2GlWlqPDzXwrR4NA" target="_blank" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
-                <li><a href="https://www.instagram.com/pharaoh_allah/?hl=en" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.instagram.com/pharaoh_aten/?hl=en" target="_blank" class="social-icon"> <i class="fa fa-instagram"></i></a></li>
             </ul>
         </div>
       </div>
